Added more personal RCS handling plus fixed a deinstall target omission.

--- a/applications/obsolete/ccdbig/makefile
+++ b/applications/obsolete/ccdbig/makefile
@@ -414,7 +414,13 @@ $(SHELL_SCRIPTS): $(PKG_NAME)_source.tar
 #  Personal rules for building source code archives from RCS and other places.
 
 check_uptodate:
-	rcsdiff $(TASKSRC) $(SUBSRC) $(IFL_FILES) $(SHELL_SCRIPTS) mk makefile
+	for f in $(RCS_FILES); do \
+           if test -f $$f; then \
+              rcsdiff $$f;\
+           else :; fi;\
+        done
+
+RCS_FILES = $(TASKSRC) $(SUBSRC) $(IFL_FILES) $(SHELL_SCRIPTS) mk makefile
 
 #  Target for checking existence of all source files.
 
@@ -672,15 +678,6 @@ install:
            else :; fi;\
         done
 #
-#  Install the Latex documentation, giving it world read permission,
-#  leaving the source copy in place.
-	for f in $(LATEX_DOCS) ""; do \
-           if test -n "$$f"; then \
-              cp -p $$f $(INSTALL_DOCS);\
-              chmod 644 $(INSTALL_DOCS)/$$f;\
-           else :; fi;\
-        done
-#
 #  Install the interface files, giving them world read permission.
 	for f in $(IFC_FILES) ""; do \
            if test -n "$$f"; then \
@@ -698,6 +695,15 @@ install:
               chmod 644 $(INSTALL_BIN)/$$f;\
               rm -f $$f;\
               $(LINK) $(INSTALL_BIN)/$$f $$f;\
+           else :; fi;\
+        done
+#
+#  Install the Latex documentation, giving it world read permission,
+#  leaving the source copy in place.
+	for f in $(LATEX_DOCS) ""; do \
+           if test -n "$$f"; then \
+              cp -p $$f $(INSTALL_DOCS);\
+              chmod 644 $(INSTALL_DOCS)/$$f;\
            else :; fi;\
         done
 #
@@ -780,6 +786,24 @@ do_deinstall:
 #
 #  Deinstall the executables, if installed versions exist.
 	- for f in $(SHELL_SCRIPTS) $(TASKS) ""; do \
+           if test -n "$$f" -a -f $(INSTALL_BIN)/$$f; then \
+              rm -f $$f;\
+              cp -p $(INSTALL_BIN)/$$f .;\
+              rm -f $(INSTALL_BIN)/$$f;\
+           else :; fi;\
+        done
+#
+#  Deinstall the interface files, if installed versions exist.
+	- for f in $(IFC_FILES) ""; do \
+           if test -n "$$f" -a -f $(INSTALL_BIN)/$$f; then \
+              rm -f $$f;\
+              cp -p $(INSTALL_BIN)/$$f .;\
+              rm -f $(INSTALL_BIN)/$$f;\
+           else :; fi;\
+        done
+#
+#  Deinstall the data files, if installed versions exist.
+	- for f in $(DATA_FILES) ""; do \
            if test -n "$$f" -a -f $(INSTALL_BIN)/$$f; then \
               rm -f $$f;\
               cp -p $(INSTALL_BIN)/$$f .;\
