autotools: recast STAR_INITIALISE_FORTRAN as STAR_INITIALISE_FORTRAN_RTL
Naming C macros the same as m4 ones is really tough sometimes so choose not to do that

Other related changes with regenerated files and autoupdate suggested fixes

--- a/applications/gaia/gaia3d/Makefile.in
+++ b/applications/gaia/gaia3d/Makefile.in
@@ -251,7 +251,7 @@ install-libraries: libraries
 	@test -d $(DESTDIR)$(pkgincludedir) || mkdir -p $(DESTDIR)$(pkgincludedir)
 	@echo "Installing header files in $(DESTDIR)$(pkgincludedir)"
 	@list='$(PKG_HEADERS)'; for i in $$list; do \
-	    echo "MANIFEST:$(srcdir)/$$i" ; \
+	    echo "MANIFEST:$(DESTDIR)$(pkgincludedir)/`basename $$i`" ; \
 	    $(INSTALL_DATA) $(srcdir)/$$i $(DESTDIR)$(pkgincludedir) ; \
 	done;
 
