extractor: regenerate configure scripts

--- a/applications/extractor/extract/configure.ac
+++ b/applications/extractor/extract/configure.ac
@@ -112,7 +112,7 @@ AC_FUNC_FSEEKO
 AC_DEFINE_UNQUOTED(THREADS_NMAX, 1,[Maximum number of POSIX threads])
 
 # href to the XSL style-sheet in preflist.h
-CFLAGS="$CFLAGS -DXSL_URL=\\\"file://$datadir/${PACKAGE_NAME}/${PACKAGE_NAME}.xsl\\\""
+CFLAGS="$CFLAGS -DXSL_URL=\\\"file://$datarootdir/${PACKAGE_NAME}/${PACKAGE_NAME}.xsl\\\""
 
 # Special optimization options for the INTEL C compiler
 if test $use_icc = "yes" -a $CC = "icc"; then
