--- a/applications/extractor/configure.ac
+++ b/applications/extractor/configure.ac
@@ -7,7 +7,7 @@ AC_INIT(extractor, 2.5-1, starlink@jiscmail.ac.uk)
 dnl    Require autoconf-2.50 at least
 AC_PREREQ(2.50)
 dnl    Require Starlink automake
-AM_INIT_AUTOMAKE(1.8.2-starlink)
+AM_INIT_AUTOMAKE([1.8.2-starlink subdir-objects])
 
 dnl    Sanity-check: name a file in the source directory -- if this
 dnl    isn't found then configure will complain
